--- a/Data_layer/Data_layer.csproj
+++ b/Data_layer/Data_layer.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Initializer.cs" />
     <Compile Include="RadioContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Models\Models.csproj">
