--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Author.cs" />
     <Compile Include="Country.cs" />
     <Compile Include="Genre.cs" />
+    <Compile Include="MainPageVM.cs" />
     <Compile Include="Picture.cs" />
     <Compile Include="Producer.cs" />
     <Compile Include="ProducerInfo.cs" />
