--- a/Radio/Web.config
+++ b/Radio/Web.config
@@ -16,7 +16,7 @@
 
     <add name="RadioContext"
         providerName="System.Data.SqlClient"
-        connectionString="Data Source=KRASII\IGORK2008R2;
+        connectionString="Data Source=(LocalDB)\v11.0;
           Initial Catalog=Radio;
             
               Integrated Security=True;MultipleActiveResultSets=True" />
