--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Producer.cs" />
     <Compile Include="ProducerInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RateRules.cs" />
     <Compile Include="Region.cs" />
     <Compile Include="Song.cs" />
   </ItemGroup>
